# cloud-gallery

./: .chromaticrc.json  .detoxrc.json  .env.example  .gitignore  AGENTS.md  LICENSE  PROMPT.md  README.md  SECURITY_POSTURE_REPORT.md  SECURITY_VALIDATION.md  TESTING_ANALYSIS_UPDATED.md  TESTING_GAMEPLAN.md  TESTING_PROGRESS_REPORT.md  TESTING_REMEDIATION_FINAL_REPORT.md  TESTING_REPORT.md  TODO.backup.md  TODO.md  accessibility-audit-report.md  app.json  babel.config.js  current_state_spec.md  design_guidelines.md  docker-compose.yml  drizzle.config.ts  eslint.config.js  failing_tests.txt  future_state_spec.md  metro.config.js  mock-audit-report.md  package-lock.json  package.json  package.json.backup  replit.md  temp_fix.txt  test-results.json  test_detailed.json  test_output.txt  test_results.json  test_results_current.json  test_run_detailed.json  (+10 more)
.aimeta/: README.md  app.json.md  package.json.md  tsconfig.json.md
.github/: dependabot.yml
.storybook/: main.ts  preview.ts
.zap/: rules.tsv
__mocks__/: react-native.ts
backups/: backup-2026-03-15T06-16-42-720Z.enc  backup-2026-03-15T06-19-08-719Z.enc  backup-2026-03-15T06-29-59-455Z.enc  backup-2026-03-15T06-31-02-365Z.enc  backup-2026-03-15T06-31-31-036Z.enc  backup-2026-03-15T06-32-11-620Z.enc  backup-2026-03-15T06-32-41-527Z.enc  backup-2026-03-15T06-33-05-323Z.enc  backup-2026-03-15T06-57-06-790Z.enc  backup-2026-03-15T06-58-33-178Z.enc  backup-2026-03-15T07-12-53-890Z.enc  (+89 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: desktop_features.rs  file_watcher.rs  main.rs
docs/: todo.md  (+5 more)
(+698 files in other folders)
