[package]
name = "cloud-gallery-desktop"
version = "1.0.0"
description = "Cloud Gallery Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = { version = "2.0", features = ["watch"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"

[lib]
name = "cloud_gallery_desktop"
crate-type = ["cdylib"]

[[bin]]
name = "cloud-gallery-desktop"
path = "src/main.rs"
